--- a/MVCTest.Tests/packages.config
+++ b/MVCTest.Tests/packages.config
@@ -1,12 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Chutzpah" version="4.1.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net452" />
   <package id="Fody" version="1.29.2" targetFramework="net452" developmentDependency="true" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="Inflector" version="1.0.0.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Moq" version="4.2.1507.0118" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net452" />
@@ -16,4 +21,8 @@
   <package id="NUnit.Runners" version="2.6.4" targetFramework="net452" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net452" />
   <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="net452" developmentDependency="true" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />
+  <package id="Unity.Mvc" version="4.0.1" targetFramework="net452" />
+  <package id="Unity.WebAPI" version="5.1" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
 </packages>
