--- a/MVCTest/packages.config
+++ b/MVCTest/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="Chutzpah" version="4.1.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net452" />
   <package id="Fody" version="1.29.2" targetFramework="net452" developmentDependency="true" />
@@ -42,5 +43,9 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="net452" developmentDependency="true" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />
+  <package id="Unity.Mvc" version="4.0.1" targetFramework="net452" />
+  <package id="Unity.WebAPI" version="5.1" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
