Added example for Fluent, AutoMap and Mapping by code.

--- a/MVCTest/MVCTest.csproj
+++ b/MVCTest/MVCTest.csproj
@@ -258,17 +258,22 @@
     <Compile Include="Repository\Entities\ContactsData.cs" />
     <Compile Include="Repository\Entities\PhoneNumber.cs" />
     <Compile Include="Repository\Entities\PhoneType.cs" />
-    <Compile Include="Repository\nHibernate\Helpers\AutomappingConfiguration.cs" />
-    <Compile Include="Repository\nHibernate\Helpers\CustomForeignKeyConvention.cs" />
-    <Compile Include="Repository\nHibernate\Helpers\IgnoreProperties.cs" />
-    <Compile Include="Repository\nHibernate\Helpers\PluralTableNameConvention.cs" />
+    <Compile Include="Repository\nHibernate\Helpers\Fluent\AutomappingConfiguration.cs" />
+    <Compile Include="Repository\nHibernate\Helpers\Fluent\CustomForeignKeyConvention.cs" />
+    <Compile Include="Repository\nHibernate\Helpers\Fluent\IgnoreProperties.cs" />
+    <Compile Include="Repository\nHibernate\Helpers\Fluent\IFluentIgnore.cs" />
+    <Compile Include="Repository\nHibernate\Helpers\MapByCode\IMapByCode.cs" />
+    <Compile Include="Repository\nHibernate\Helpers\MapByCode\MapToCodeConfiguration.cs" />
+    <Compile Include="Repository\nHibernate\Helpers\Fluent\PluralTableNameConvention.cs" />
     <Compile Include="Repository\IEntity.cs" />
     <Compile Include="Repository\IReadRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\IUnitOfWork.cs" />
     <Compile Include="Repository\IUnitOfWorkRepositories.cs" />
     <Compile Include="Repository\IWriteRepository.cs" />
-    <Compile Include="Repository\nHibernate\Overrides\ContactsOverrides.cs" />
+    <Compile Include="Repository\nHibernate\Mappings\Fluent\PhoneNumberMap.cs" />
+    <Compile Include="Repository\nHibernate\Mappings\MapByCode\PhoneTypeMap.cs" />
+    <Compile Include="Repository\nHibernate\Mappings\Overrides\ContactsOverrides.cs" />
     <Compile Include="Repository\nHibernate\Repository.cs" />
     <Compile Include="Repository\nHibernate\TrainingContext.cs" />
     <Compile Include="Repository\nHibernate\UnitOfWork.cs" />
