--- a/MVCTest/Web.Release.config
+++ b/MVCTest/Web.Release.config
@@ -2,7 +2,7 @@
 
 <!-- For more information on using Web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=301874 -->
 
-<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+<Configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <!--
     In the example below, the "SetAttributes" transform will change the value of
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
@@ -28,4 +28,4 @@
       </customErrors>
     -->
   </system.web>
-</configuration>
+</Configuration>
