--- a/MVCTest/packages.config
+++ b/MVCTest/packages.config
@@ -11,6 +11,7 @@
   <package id="Inflector" version="1.0.0.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
@@ -20,6 +21,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
@@ -43,6 +45,7 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="net452" developmentDependency="true" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="StyleCop.MSBuild" version="4.7.49.1" targetFramework="net452" developmentDependency="true" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.Mvc" version="4.0.1" targetFramework="net452" />
   <package id="Unity.WebAPI" version="5.1" targetFramework="net452" />
